# RemoteSimGL

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
remote-fluid-renderer/: CMakeLists.txt
remote-fluid-renderer/client/: index.html  webrtc-client.js
remote-fluid-renderer/include/: Common.hpp  InputHandler.hpp  WebRTCStreamer.hpp
remote-fluid-renderer/scripts/: build_webrtc.sh  run_local.sh
remote-fluid-renderer/shaders/: fluid.frag
remote-fluid-renderer/signaling-server/: package.json  server.js
remote-fluid-renderer/src/: FluidSim.cpp  InputHandler.cpp  NVEncoder.cpp  Renderer.cpp  main.cpp
remote_sim_gl/: CMakeLists.txt  README.md
remote_sim_gl/client/: index.html  styles.css  webrtc-client.js
remote_sim_gl/include/: Common.hpp  FluidSim.hpp  InputHandler.hpp  NVEncoder.hpp  Renderer.hpp  WebRTCStreamer.hpp
remote_sim_gl/scripts/: build_webrtc.sh  run_local.sh
remote_sim_gl/shaders/: fluid.frag  fluid.vert
remote_sim_gl/signaling-server/: package.json  server.js
remote_sim_gl/src/: FluidSim.cpp  InputHandler.cpp  NVEncoder.cpp  Renderer.cpp  WebRTCStreamer.cpp  main.cpp
